# routes/swagger.yaml
@@ -35,7 +35,7 @@ paths:
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: "Internal Server Error"
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"
     put:
@@ -63,7 +63,7 @@ paths:
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: "Internal Server Error"
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"
     delete:
@@ -91,7 +91,7 @@ paths:
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: "Internal Server Error"
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"
     get:
@@ -138,7 +138,7 @@ paths:
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: "Internal Server Error"
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"
   /response/{campaign}:
@@ -163,7 +163,7 @@ paths:
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: "Internal Server Error"
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"
     put:
@@ -191,7 +191,7 @@ paths:
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: "Internal Server Error"
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"
     delete:
@@ -219,7 +219,7 @@ paths:
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: "Internal Server Error"
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"
     get:
@@ -278,7 +278,7 @@ paths:
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: ""
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"           
   /campaigns/{group}:
@@ -301,7 +301,7 @@ paths:
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: "Internal Server Error"
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"
   /groups:
@@ -317,7 +317,7 @@ paths:
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: "Internal Server Error"
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"
   /tools/clean:
@@ -329,7 +329,7 @@ paths:
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: "Internal Server Error"
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"
   /tools/purge:
@@ -341,19 +341,26 @@ paths:
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: "Internal Server Error"
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"
   /tools/import:
     post:
       description: "Import database sets"
+      parameters:
+        - name: filter
+          in: query
+          required: true
+          description: "File filter"
+          type: string
+          default: '{"data":"^00_.*\\.(yaml)$"}'         
       responses:
         200:
           description: "Database sets import"
           schema:
            "$ref": "#/definitions/Message"
         500:
-          description: ""
+          description: "Error system"
           schema:
            "$ref": "#/definitions/Message"
   /tools/version:
